--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
